intézkedés státusz kötelező

--- a/Pages/GroupRemote/TasksIntezkedes/_TaskModals.cshtml
+++ b/Pages/GroupRemote/TasksIntezkedes/_TaskModals.cshtml
@@ -90,7 +90,7 @@
 
             <div class="col-md-6">
               <label class="form-label">Státusz</label>
-              <select class="form-select" name="TaskStatusPMId" id="TaskStatusPMId">
+              <select class="form-select" name="TaskStatusPMId" id="TaskStatusPMId" required>
                 <option value="">-- Válasszon --</option>
               </select>
             </div>
